Update Find command to accept name and day find